# qas-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-sdk.yml
docs/api/: compression-api.md
docs/guides/: authentication.md  qas-sdk-installation-guide.md  qas-sdk-migration-guide.md  qas-sdk-support-policy.md  sdk-method-reference.md
docs/internal/: qas-1.6-sdk-compatibility-plan.md
docs/legal/: third-party-notices.md
examples/: .env.example  README.md  __init__.py  api_walkthrough.ipynb  api_walkthrough.py  compression_golden_path.py  example.qasm  sdk_and_api_walkthrough.ipynb  sdk_and_api_walkthrough.py  sdk_walkthrough.ipynb  sdk_walkthrough.py
qas_sdk/: __init__.py  auth.py  cli.py  client.py
tests/: __init__.py  test_auth_cli.py  test_qas_client.py  test_walkthrough_examples.py
