[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61", "wheel" ]

[project]
name = "qas-sdk"
version = "0.1.5"
description = "Python SDK for QAS Circuit Compression API"
readme = "README.md"
keywords = [ "circuit compression", "optimization", "qas", "quantum", "quantum computing" ]
license = { text = "MIT" }
authors = [
  { name = "Qmill", email = "support@qmill.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "requests>=2.25",
]
optional-dependencies.dev = [
  "mypy>=1",
  "pytest>=7",
  "pytest-cov>=4",
]
urls.Documentation = "https://github.com/qmill-org/qas-sdk/blob/main/docs/api/compression-api.md"
urls.Homepage = "https://qas.qmill.com"
urls.Issues = "https://github.com/qmill-org/qas-sdk/issues"
urls.Repository = "https://github.com/qmill-org/qas-sdk"
scripts.qas = "qas_sdk.cli:main"

[tool.setuptools]
package-data.qas_sdk = [ "py.typed" ]
packages.find.where = [ "." ]
packages.find.include = [ "qas_sdk*" ]

[tool.ruff]
line-length = 100
target-version = "py310"
